--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,22 @@
 {
-	"extends": ["eslint:recommended", "google"],
-	"env": { 
-  	"browser": true,
-  	"node": true,
-  	"es6": true,
-  	"mocha": true
+  "extends": [
+    "eslint:recommended",
+    "google"
+  ],
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true,
+    "mocha": true
   },
-	"parserOptions": {
- 		"sourceType": "module",
-  	"ecmaVersion": 8
-	},
-	"rules": {
-		"linebreak-style": "off",
-  	"require-jsdoc": "off",
-  	"max-len": "off",
-  	"prefer-spread": "off"
-	}
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 8
+  },
+  "rules": {
+    "linebreak-style": "off",
+    "require-jsdoc": "off",
+    "max-len": "off",
+    "prefer-spread": "off"
+  }
 }
-  
